# Market-Research-Using-Mutliple-Agents

./: .gitignore  README.md  app.py  cli.py  main.py  pyproject.toml  requirements.txt
agents/: agents_pipeline.py  genai_solutions_agent.py  industry_research_agent.py  resource_collector_agent.py  run_agents.py  usecase_generation_agent.py
utils/: llm.py  search.py
